# SmartFridge

./: README.md  main.py  pyproject.toml  requirements.txt
app/: demand.py  home.py  login.py  logout.py  product_list.py  qr_scanner.py
dev/: development.ipynb
dev/tables/: fridge.csv  fridge_log.csv  product_types.csv  products.csv  users.csv
utils/: connections.py
