[tool.poetry]
name = "smartfridge"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "1.41.0"
pandas = "^2.2.3"
qrcode = "^8.0"
plotly = "^5.24.1"
psycopg2-binary = "^2.9.10"
opencv-python = "^4.10.0.84"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
sqlalchemy = "^2.0.36"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
